--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/loginpage/pageconnexion.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/loginpage/pageconnexion.html
@@ -26,7 +26,7 @@
     <main class="loginbackground">
         <section id="contact">
             <h2>Log In</h2>
-            <form action="" method="post">
+            <form id="loginForm" action="" method="post">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
