gestion du login/logout

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="assets/script.js" defer></script>
+	<script src="assets/checkLogin.js" defer></script>
 </head>
 <body>
 <header>
@@ -18,7 +19,8 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="loginpage/pageconnexion.html">login</a></li>
+			<li id="login"><a href="loginpage/pageconnexion.html">login</a></li>
+			<li id="logout">logout</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
