déplacement de index.html + changements des chemins liés

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/47f4b42e9c.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./assets/style.css">
-	<script src="assets/script.js" defer></script>
-	<script src="assets/modal.js" defer></script>
-	<script src="assets/checkLogin.js" defer></script>
+	<link rel="stylesheet" href="FrontEnd/assets/style.css">
+	<script src="FrontEnd/assets/script.js" defer></script>
+	<script src="FrontEnd/assets/modal.js" defer></script>
+	<script src="FrontEnd/assets/checkLogin.js" defer></script>
 </head>
 <body>
 <div id="editionBanner">
@@ -25,16 +25,16 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li id="login"><a href="loginpage/pageconnexion.html">login</a></li>
+			<li id="login"><a href="FrontEnd/loginpage/pageconnexion.html">login</a></li>
 			<li id="logout">logout</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
 	<section id="introduction">
 		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
+			<img src="FrontEnd/assets/images/sophie-bluel.png" alt="">
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
