modifications de style

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/loginpage/pageconnexion.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/loginpage/pageconnexion.html
@@ -34,7 +34,7 @@
                 <p class="hidden">Email ou mot de passe incorrect</p>
                 <input type="submit" value="Se connecter">
             </form>
-            <a href="#">Mot de passe oublié</a>
+            <a id="passwordForgotten" href="#">Mot de passe oublié</a>
         </section>
     </main>
 
