ajout du reset de la modale ajouter une image ne recharge plus la page

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -10,8 +10,8 @@
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/47f4b42e9c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="assets/script.js" defer></script>
-	<script src="assets/modal.js" defer></script>
+	<script type="module" src="assets/script.js" defer></script>
+	<script type="module" src="assets/modal.js" defer></script>
 	<script src="assets/checkLogin.js" defer></script>
 </head>
 <body>
@@ -92,7 +92,6 @@
 						<select name="category" id="category">
 						</select>
 						<div class="greyLine"></div>
-						<span id="output"></span>
 						<input type="submit" value="Valider">
 					</form>
 				</div>
